<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroupProfesion"
        android:layout_width="232dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <!-- RadioButton para Arquero -->

        <!-- RadioButton para Guerrero -->

        <!-- RadioButton para Mago -->
        <RadioButton
            android:id="@+id/radioButtonArquero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdb_arquero" />

        <RadioButton
            android:id="@+id/radioButtonGuerrero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdb_guerrero" />

        <RadioButton
            android:id="@+id/radioButtonMago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdb_mago" />

        <!-- RadioButton para Herrero -->
        <RadioButton
            android:id="@+id/radioButtonHerrero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdb_herrero" />

        <!-- RadioButton para Minero -->
        <RadioButton
            android:id="@+id/radioButtonMinero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdb_minero" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>