<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroupEspecie"
        android:layout_width="220dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/radioButtonElfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdb_elfo" />

        <RadioButton
            android:id="@+id/radioButtonEnano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdb_enano" />

        <RadioButton
            android:id="@+id/radioButtonHobbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdb_hobbit" />

        <RadioButton
            android:id="@+id/radioButtonHumano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdb_humano" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>